objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HealthCloudGA__CareGap</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Healthcare</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_AlternateFunding</fullName>
        <description>Support Process for Alternate Funding</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_Appeal</fullName>
        <description>Support Process for Appeal</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Missing Information</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_BIBV</fullName>
        <description>Support Process for BI/BV</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Missing Information</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_Copay</fullName>
        <description>Support Process for Copay</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Missing Information</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_Enrollment</fullName>
        <description>Support Process for Enrollment</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_Generic Case Process</fullName>
        <description>Used to support PC access service cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_PAP</fullName>
        <description>Support Process for PAP</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_PriorAuthorization</fullName>
        <description>Support Process for Prior Authorization</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Missing Information</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PC_Program</fullName>
        <description>Used for managing a patient&apos;s program</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appeal</fullName>
        </values>
        <values>
            <fullName>Benefit Verification</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Enrollment %26 Onboarding</fullName>
        </values>
        <values>
            <fullName>In Treatment</fullName>
        </values>
        <values>
            <fullName>Missing Information</fullName>
        </values>
        <values>
            <fullName>Monitoring</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pretreatment</fullName>
        </values>
        <values>
            <fullName>Prior Authorization</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Triaged to SP</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACLS_Appeal_Outcome__c</fullName>
        <label>Appeal Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Appeal_Status__c</fullName>
        <label>APPEAL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Action Required</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Approval_Number__c</fullName>
        <label>Approval Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Benefits_Verification_Status__c</fullName>
        <label>BENEFITS VERIFICATION</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Action Required</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Case_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Manager handling the Case</description>
        <label>Case Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Commercially_Insured__c</fullName>
        <label>Commercially Insured (Non-Governmental)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Copay_Card_ID__c</fullName>
        <label>Copay Card ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_Copay_Card_Status__c</fullName>
        <label>Copay Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Date_Submitted_to_HCP__c</fullName>
        <label>Date Submitted to HCP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACLS_Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACLS_Engagement_Program_Code__c</fullName>
        <label>Engagement Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_On_label_Diagnosis__c</fullName>
        <label>On label Diagnosis?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_PA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PA Required?</description>
        <label>PA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACLS_Potential_Adverse_Event_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Adverse Event Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACLS_Pre_Requisite_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Requisite Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACLS_Prior_Authorization_Status__c</fullName>
        <label>PRIOR AUTHORIZATION</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Action Required</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Product_Name__c</fullName>
        <formula>PC_Program_Product__r.PC_Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Sub_status__c</fullName>
        <label>Sub-status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Level</fullName>
                </value>
                <value>
                    <fullName>Second Level</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Covered with Restrictions</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DueDate__c</fullName>
        <description>Date by when this care gap should be closed.</description>
        <inlineHelpText>Date by when this care gap should be closed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FinancialValue__c</fullName>
        <description>Potential savings by closing this care gap.</description>
        <inlineHelpText>Potential savings by closing this care gap.</inlineHelpText>
        <label>Financial Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <description>Rank by which this care gap is sorted.</description>
        <inlineHelpText>Rank by which this care gap is sorted.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureID__c</fullName>
        <description>ID of the source agency&apos;s measure for this care gap.</description>
        <inlineHelpText>ID of the source agency&apos;s measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureVersion__c</fullName>
        <description>Version of the source agency&apos;s ID measure for this care gap.</description>
        <inlineHelpText>Version of the source agency&apos;s ID measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgency__c</fullName>
        <description>Agency that identified the care gap.</description>
        <inlineHelpText>Agency that identified the care gap.</inlineHelpText>
        <label>Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID in the source system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID in the source system.</inlineHelpText>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated.</description>
        <inlineHelpText>When last updated.</inlineHelpText>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Name of the system where this care gap was identified.</description>
        <inlineHelpText>Name of the system where this care gap was identified.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_AccountId__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ActiveApplicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to the active applicant in an enrollment case, if there are multiple applicants.</description>
        <label>ActiveApplicant</label>
        <referenceTo>PC_Applicant__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>CaseApplicant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Address_1__c</fullName>
        <description>The Primary Address 1 of the patient.</description>
        <formula>Account.PC_Primary_Address__r.PC_Address_1__c</formula>
        <label>Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address_2__c</fullName>
        <description>The Primary Address 2 of the patient.</description>
        <formula>Account.PC_Primary_Address__r.PC_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address_3__c</fullName>
        <description>The Primary Address 3 of the patient</description>
        <formula>Account.PC_Primary_Address__r.PC_Address_3__c</formula>
        <label>Address 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Appeal_Attempt__c</fullName>
        <description>The Appeal Attempt (1,2,3) for a particular investigation.</description>
        <label>Appeal Attempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st,2nd,3rd</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Appeal_Available__c</fullName>
        <description>States if the appeal is possible or not.</description>
        <label>Appeal Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Appeal_No__c</fullName>
        <description>The reference number of the appeal.</description>
        <label>Appeal No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Approval_Denial_Date__c</fullName>
        <description>The date on which the access case was denied or approved.</description>
        <label>Approval / Denial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Call_Outcome__c</fullName>
        <description>Outcome of phone call (if reached, or left message, etc.).</description>
        <label>Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reached</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>No Voicemail</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Care_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated support coordinator</description>
        <label>Care Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Details__c</fullName>
        <description>The details about patient’s caregiver</description>
        <formula>PC_Program__r.Account.PC_Caregiver_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caregiver Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_First_Name__c</fullName>
        <description>The first name of patient’s caregiver.</description>
        <formula>PC_Program__r.Account.PC_Caregiver_First_Name__c</formula>
        <label>Caregiver First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Last_Name__c</fullName>
        <description>The last name of patient’s caregiver</description>
        <formula>PC_Program__r.Account.PC_Caregiver_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caregiver Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Relationship_to_Patient__c</fullName>
        <description>The caregiver’s relationship to the patient such as Self, Spouse, Child, Father, Mother, Domestic Partner, Guardian, Other.</description>
        <formula>TEXT( PC_Program__r.Account.PC_Caregiver_Relationship_to_Patient__c )</formula>
        <label>Caregiver Relationship to Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Salutation__c</fullName>
        <description>The caregiver salutation such as Mr., Ms., Mrs., and Dr.</description>
        <formula>TEXT( PC_Program__r.Account.PC_Caregiver_Salutation__c )</formula>
        <label>Caregiver Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Case_Outcome__c</fullName>
        <description>This field is used to track the outcome of various types of access service cases.</description>
        <label>Case Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>PA Required</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Appeal Required</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Information Not Received</fullName>
                </value>
                <value>
                    <fullName>HCP Withdrew</fullName>
                </value>
                <value>
                    <fullName>Patient Withdrew</fullName>
                </value>
                <value>
                    <fullName>No Response from HCP</fullName>
                </value>
                <value>
                    <fullName>Patient Unreachable</fullName>
                </value>
                <value>
                    <fullName>Created in Error</fullName>
                </value>
                <value>
                    <fullName>Off Label</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Missing Patient Consent</fullName>
                </value>
                <value>
                    <fullName>Missing Insurance Details</fullName>
                </value>
                <value>
                    <fullName>Missing HCP Authorization</fullName>
                </value>
                <value>
                    <fullName>Missing Valid Prescription</fullName>
                </value>
                <value>
                    <fullName>Missing Other Information</fullName>
                </value>
                <value>
                    <fullName>Covered with Restrictions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_City__c</fullName>
        <description>The primary city of the patient.</description>
        <formula>Account.PC_Primary_Address__r.PC_City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Communication_Language__c</fullName>
        <description>Patient’s choice of communication language.</description>
        <formula>TEXT ( Account.PC_Communication_Language__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Date_PC_Submitted_to_Physician__c</fullName>
        <description>The date on which the prior authorization or appeal was submitted to the Physician or other HCP</description>
        <label>Date Submitted to Physician</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Date_Submitted_to_Patient__c</fullName>
        <description>The date on which the PA /SA was submitted to the patient</description>
        <label>Date Submitted to Patient</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Date_Submitted_to_Payer__c</fullName>
        <description>The date on which the prior authorization or appeal was submitted to the payer</description>
        <label>Date Submitted to Payer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Denial_Reason__c</fullName>
        <description>The reason on which the access case was denied</description>
        <label>Denial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insurer guidelines not met</fullName>
                </value>
                <value>
                    <fullName>Patient reached maximum benefits</fullName>
                </value>
                <value>
                    <fullName>Benefits terminated</fullName>
                </value>
                <value>
                    <fullName>Off label use</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Email__c</fullName>
        <description>The email of the patient account</description>
        <formula>Account.PC_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_EngagementProgramName__c</fullName>
        <formula>PC_Engagement_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to the associated engagement program for which the case has been created</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_EnrollmentWizardState__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <description>Stores the JSON representation of data collected by the Enrollment Wizard. This is used to support stopping and resuming of the enrollment data entry process.
Note: This field is not visible to the end user. Added in v3.0.1</description>
        <label>Enrollment Wizard State</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Enrollment_Date__c</fullName>
        <description>The date on which the patient was enrolled to the program</description>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Gender__c</fullName>
        <description>The gender of the patient</description>
        <formula>TEXT ( Account.PC_Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Health_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Health plan using which the PA case was created</description>
        <inlineHelpText>Health plan using which the PA case was created</inlineHelpText>
        <label>Health Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PC_Health_Plan__c.Patient__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PC_Health_Plan__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_PA_Comments__c</fullName>
        <description>Comments on the associated prior authorization</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_PA_Expiration_Date__c</fullName>
        <description>Date when the prior authorization expires</description>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_PA_No__c</fullName>
        <description>The Prior Authorization (PA) reference number</description>
        <label>PA Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PA_Outcome__c</fullName>
        <label>PA Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_PA_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Unsent</fullName>
                    <isActive>false</isActive>
                    <label>Unsent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PA_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prescription for which PA is requested</description>
        <label>Prescription</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PC_Prescription__c.PC_Program_Case__c</field>
                <operation>equals</operation>
                <valueField>$Source.PC_Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>PC_Prescription__c.PC_hasActivePA__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PC_Prescription__c</referenceTo>
        <relationshipLabel>Prescriptions</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>